@@ -7,6 +7,7 @@ NEWS
 
   * added support for If-Range: <date> (#1346)
   * added support for matching $HTTP["scheme"] in configs
+  * fixed initgroups() called after chroot (#1384)
 
 - 1.4.18 - 2007-09-09
 
